--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2466,10 +2466,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#KNN\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "clf1 = KNeighborsClassifier()\n",
+    "clf1.fit(x_train, y_train)\n",
+    "test_preds = clf1.predict(x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision Score: 0.6336566659147305\n",
+      "Recall Score: 0.4976085031000886\n",
+      "Accuracy Score: 0.6058329650905877\n",
+      "F1 Score: 0.5574518753720977\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_metrics(labels, preds):\n",
+    "    print(\"Precision Score: {}\".format(precision_score(labels, preds)))\n",
+    "    print(\"Recall Score: {}\".format(recall_score(labels, preds)))\n",
+    "    print(\"Accuracy Score: {}\".format(accuracy_score(labels, preds)))\n",
+    "    print(\"F1 Score: {}\".format(f1_score(labels, preds)))\n",
+    "    \n",
+    "print_metrics(y_test, test_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision Score: 0.6185633924707918\n",
+      "Recall Score: 0.5064658990256864\n",
+      "Accuracy Score: 0.5979673000441891\n",
+      "F1 Score: 0.5569299698061752\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "nb_classifier = MultinomialNB()\n",
+    "nb_classifier.fit(x_train, y_train)\n",
+    "#nb_train_preds = nb_classifier.predict(tf_idf_data_train)\n",
+    "nb_test_preds = nb_classifier.predict(x_test)\n",
+    "\n",
+    "print_metrics(y_test, nb_test_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision Score: 0.6275645268034414\n",
+      "Recall Score: 0.6719220549158548\n",
+      "Accuracy Score: 0.6373840035351304\n",
+      "F1 Score: 0.6489862263666695\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=100)\n",
+    "rf_classifier.fit(x_train, y_train)\n",
+    "#rf_train_preds = rf_classifier.predict(tf_idf_data_train)\n",
+    "rf_test_preds = rf_classifier.predict(x_test)\n",
+    "print_metrics(y_test, rf_test_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "svm_clf = svm.SVC(kernel='linear')\n",
+    "svm_clf.fit(x_train, y_train)\n",
+    "svm_preds = svm_clf.predict(x_test)\n",
+    "print_metrics(y_test, svm_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components=200)\n",
+    "pca.fit(X)\n",
+    "X_pca = pca.transform(X)\n"
+   ]
   }
  ],
  "metadata": {
