--- a/ModelRunning.ipynb
+++ b/ModelRunning.ipynb
@@ -22,7 +22,9 @@
     "\n",
     "#Feature Engineering Params\n",
     "tf_idf_rate = 0.2\n",
-    "pca_num = 200"
+    "pca_num = 200\n",
+    "\n",
+    "data_params={'stem': stem, 'english': english, 'tf_idf_rate': tf_idf_rate, 'pca_num': pca_num}"
    ]
   },
   {
@@ -111,54 +113,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
+    "import os\n",
     "\n",
     "#return the fitted grid search...\n",
     "#model is non-parameterized model to grid search, params are the params of interest\n",
     "#filename is a file to write results to in csv format\n",
-    "def write_results(results, filename):\n",
+    "\n",
+    "#TODO: edit so it writes more metrics? idk. \n",
+    "def write_results(results, directory, data_params, filename):\n",
+    "    if not os.path.exists(directory):\n",
+    "        os.makedirs(directory)\n",
     "    df = pd.DataFrame.from_dict(dict(results), orient=\"index\")\n",
-    "    df.to_csv(filename + '.csv')\n",
-    "    \n",
-    "def grid_search(model, x_train, y_train, param_grid, filepath='models/'):\n",
+    "    data_param_string = '_'.join([str(x) + '-' + str(data_params[x]) for x in data_params.keys()])\n",
+    "    df.to_csv(directory + filename + '_' + data_param_string + '.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Use this function to perform grid search! It will automatically write to 'models/' directory.\n",
+    "#NOTE: data_params is just the values we used to build the data and do feature engineering... \n",
+    "#it gets passed in because we need to make a note of it in the file where the outputs for the model go.\n",
+    "\n",
+    "def grid_search(model, x_train, y_train, param_grid, data_params, filepath='models/'):\n",
     "    clf = model\n",
     "    gs_tree = GridSearchCV(clf, param_grid, cv=5)\n",
     "    gs_tree.fit(x_train, y_train)\n",
     "    results = gs_tree.cv_results_\n",
-    "    write_results(results, filepath + '/' + str(model) + '/' + str(param_grid))\n",
+    "    model_str = str(model)\n",
+    "    model_str = model_str[0:model_str.find('(')]\n",
+    "    write_results(results, filepath + model_str + '/', data_params, str(param_grid))\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # param_grid = {\n",
-    "   #     \"criterion\": [\"gini\", \"entropy\"],\n",
-    "   #     \"max_depth\": [1, 2, 5, 10],\n",
-    "   #     \"min_samples_split\": [1, 5, 10, 20]\n",
-    "   # }\n",
-    "    #example param_grid for DecisionTreeClassifier"
+    "# Multinomial Naive Bayes GridSearch - SCOTT: DO THIS ONE, choose some params, follow KNN Grid Search cell "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Multinomial Naive Bayes GridSearch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,62 +173,25 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "knn_clf = KNeighborsClassifier()\n",
     "param_grid = {\n",
-    "    'n_neighbors': range(1, 2), #10\n",
-    "    'p': range(2,4), #3\n",
+    "    'n_neighbors': [1], \n",
+    "    'p': [2], \n",
     "    'n_jobs': [5]\n",
     "}\n",
-    "results = grid_search(knn_clf, x_train, y_train, param_grid)"
+    "results = grid_search(knn_clf, x_train, y_train, param_grid, data_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'mean_fit_time': array([0.37310596]), 'std_fit_time': array([0.03629228]), 'mean_score_time': array([20.15562296]), 'std_score_time': array([0.78352766]), 'param_n_jobs': masked_array(data=[5],\n",
-      "             mask=[False],\n",
-      "       fill_value='?',\n",
-      "            dtype=object), 'param_n_neighbors': masked_array(data=[1],\n",
-      "             mask=[False],\n",
-      "       fill_value='?',\n",
-      "            dtype=object), 'param_p': masked_array(data=[2],\n",
-      "             mask=[False],\n",
-      "       fill_value='?',\n",
-      "            dtype=object), 'params': [{'n_jobs': 5, 'n_neighbors': 1, 'p': 2}], 'split0_test_score': array([0.57892411]), 'split1_test_score': array([0.57931949]), 'split2_test_score': array([0.57622625]), 'split3_test_score': array([0.58413435]), 'split4_test_score': array([0.57573749]), 'mean_test_score': array([0.57886829]), 'std_test_score': array([0.00299056]), 'rank_test_score': array([1], dtype=int32), 'split0_train_score': array([0.97461747]), 'split1_train_score': array([0.97287817]), 'split2_train_score': array([0.9743696]), 'split3_train_score': array([0.97445316]), 'split4_train_score': array([0.97453601]), 'mean_train_score': array([0.97417088]), 'std_train_score': array([0.00065162])}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(dict(results))"
+    "# Random Forest Grid Search - SCOTT: DO THIS ONE, choose some params, follow KNN Grid Search cell "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision Score: 0.6002381897578404\n",
-      "Recall Score: 0.5295044650674138\n",
-      "Accuracy Score: 0.5845338046840477\n",
-      "F1 Score: 0.5626569913480323\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Random Forest Grid Search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
